package app.domain.model;

public interface ReportToNHS {
    void writeUsingFileWriter(String data);
}
